[gd_scene load_steps=34 format=3 uid="uid://cc70ktmpmbjts"]

[ext_resource type="Theme" uid="uid://eabew2p3tsgy" path="res://Resources/Theme/bottom_menu_theme.tres" id="1_u18mo"]
[ext_resource type="Theme" uid="uid://dtwj74dyjwmi7" path="res://Resources/Theme/custom_theme.tres" id="4_nd5uj"]
[ext_resource type="Texture2D" uid="uid://d3gaytlpm3l0a" path="res://Assets/Towers/tower_icons_s.png" id="4_r2xy7"]
[ext_resource type="Texture2D" uid="uid://4urow6esjtqa" path="res://Assets/Towers/tower_icons_xs.png" id="5_2y3fp"]
[ext_resource type="Script" path="res://Scenes/HUD/BottomMenuBar.gd" id="6"]
[ext_resource type="PackedScene" uid="uid://u7sl0wxhnt55" path="res://Scenes/HUD/Buttons/ElementButton.tscn" id="6_blybv"]
[ext_resource type="Script" path="res://Scenes/HUD/BuildBar.gd" id="7"]
[ext_resource type="Texture2D" uid="uid://de76st4td7ff1" path="res://Assets/Towers/tower_icons_m.png" id="7_u0cig"]
[ext_resource type="Script" path="res://Scenes/HUD/ItemStashMenu.gd" id="8_ww2i1"]
[ext_resource type="Texture2D" uid="uid://dl22jvey8l5fo" path="res://Assets/UI/HUD/hud_atlas.png" id="9_dxvdv"]
[ext_resource type="PackedScene" uid="uid://1a6qmxkrspc8" path="res://Scenes/HUD/BottomMenuBar/ResourceStatusPanel.tscn" id="9_rbj65"]
[ext_resource type="Script" path="res://Scenes/HUD/BottomMenuBar/Gold.gd" id="10_ewb28"]
[ext_resource type="Script" path="res://Scenes/HUD/BottomMenuBar/KnowledgeTome.gd" id="11_hpp3y"]
[ext_resource type="Script" path="res://Scenes/HUD/BottomMenuBar/FoodStatusPanel.gd" id="13_b8pl0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_agwsv"]
atlas = ExtResource("9_dxvdv")
region = Rect2(1086, 3, 160, 197)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_df1u7"]
texture = SubResource("AtlasTexture_agwsv")

[sub_resource type="AtlasTexture" id="AtlasTexture_ju33v"]
atlas = ExtResource("4_r2xy7")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypogo"]
atlas = ExtResource("4_r2xy7")
region = Rect2(448, 64, 64, 64)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u05n0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kimal"]
atlas = ExtResource("7_u0cig")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv1wn"]
atlas = ExtResource("7_u0cig")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_msyv0"]
atlas = ExtResource("7_u0cig")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_43hdh"]
atlas = ExtResource("7_u0cig")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_oem0s"]
atlas = ExtResource("7_u0cig")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8aae"]
atlas = ExtResource("7_u0cig")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3h523"]
atlas = ExtResource("7_u0cig")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_58l2a"]
atlas = ExtResource("9_dxvdv")
region = Rect2(0, 133, 1077, 169)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k0a7c"]
texture = SubResource("AtlasTexture_58l2a")

[sub_resource type="AtlasTexture" id="AtlasTexture_nxluh"]
atlas = ExtResource("9_dxvdv")
region = Rect2(1253, 4, 159, 197)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oe0pm"]
texture = SubResource("AtlasTexture_nxluh")

[sub_resource type="AtlasTexture" id="AtlasTexture_rpdmv"]
atlas = ExtResource("5_2y3fp")
region = Rect2(224, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3eojl"]
atlas = ExtResource("5_2y3fp")
region = Rect2(224, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4urn"]
atlas = ExtResource("5_2y3fp")
region = Rect2(224, 128, 32, 32)

[node name="BottomMenuBar" type="Control" node_paths=PackedStringArray("_item_stash_menu", "_build_bar", "_item_menu_button", "_building_menu_button", "_research_button", "_elements_container", "_tomes_status", "_gold_status", "_tower_stash", "_stash_scroll_container")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false
theme = ExtResource("1_u18mo")
script = ExtResource("6")
_item_stash_menu = NodePath("HBoxContainer/CentralMenu/VBoxContainer/MarginContainer/ScrollContainer/StashMarginContainer/ItemStashMenu")
_build_bar = NodePath("HBoxContainer/CentralMenu/VBoxContainer/MarginContainer/ScrollContainer/StashMarginContainer/BuildBar")
_item_menu_button = NodePath("HBoxContainer/LeftMenu/MarginContainer2/ItemMenuButton")
_building_menu_button = NodePath("HBoxContainer/LeftMenu/MarginContainer/VBoxContainer2/BuildingMenuButton")
_research_button = NodePath("HBoxContainer/LeftMenu/MarginContainer/VBoxContainer2/UpgradeElementButton")
_elements_container = NodePath("HBoxContainer/CentralMenu/VBoxContainer/MarginContainer2/HBoxContainer")
_tomes_status = NodePath("HBoxContainer/RightMenu/MarginContainer/VBoxContainer/KnowledgeTomeStatusPanel")
_gold_status = NodePath("HBoxContainer/RightMenu/MarginContainer/VBoxContainer/GoldStatusPanel")
_tower_stash = NodePath("HBoxContainer/CentralMenu/VBoxContainer/MarginContainer/ScrollContainer/StashMarginContainer/BuildBar")
_stash_scroll_container = NodePath("HBoxContainer/CentralMenu/VBoxContainer/MarginContainer/ScrollContainer")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -2

[node name="LeftMenu" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(159, 209)
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxTexture_df1u7")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/LeftMenu"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 24
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 18

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/LeftMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="UpgradeElementButton" type="Button" parent="HBoxContainer/LeftMenu/MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(2.08165e-12, 48)
layout_mode = 2
tooltip_text = "Switch menu to items"
theme_override_font_sizes/font_size = 20
text = "Upgrade"
expand_icon = true

[node name="BuildingMenuButton" type="Button" parent="HBoxContainer/LeftMenu/MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(2.08165e-12, 48)
layout_mode = 2
tooltip_text = "Switch menu to towers"
text = "122"
icon = SubResource("AtlasTexture_ju33v")
expand_icon = true

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/LeftMenu"]
show_behind_parent = true
layout_mode = 2
theme_override_constants/margin_left = -100
theme_override_constants/margin_top = 40
theme_override_constants/margin_bottom = 20

[node name="ItemMenuButton" type="Button" parent="HBoxContainer/LeftMenu/MarginContainer2"]
custom_minimum_size = Vector2(2.08165e-12, 48)
layout_mode = 2
tooltip_text = "Switch menu to items"
icon = SubResource("AtlasTexture_ypogo")
expand_icon = true

[node name="CentralMenu" type="MarginContainer" parent="HBoxContainer"]
z_index = -1
layout_mode = 2
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/CentralMenu"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_nd5uj")

[node name="MarginContainer2" type="PanelContainer" parent="HBoxContainer/CentralMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_u05n0")

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/CentralMenu/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="ElementButton" parent="HBoxContainer/CentralMenu/VBoxContainer/MarginContainer2/HBoxContainer" groups=["element_button"] instance=ExtResource("6_blybv")]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_kimal")
element = 0

[node name="ElementButton2" parent="HBoxContainer/CentralMenu/VBoxContainer/MarginContainer2/HBoxContainer" groups=["element_button"] instance=ExtResource("6_blybv")]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_yv1wn")
element = 1

[node name="ElementButton3" parent="HBoxContainer/CentralMenu/VBoxContainer/MarginContainer2/HBoxContainer" groups=["element_button"] instance=ExtResource("6_blybv")]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_msyv0")
element = 2

[node name="ElementButton4" parent="HBoxContainer/CentralMenu/VBoxContainer/MarginContainer2/HBoxContainer" groups=["element_button"] instance=ExtResource("6_blybv")]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_43hdh")

[node name="ElementButton5" parent="HBoxContainer/CentralMenu/VBoxContainer/MarginContainer2/HBoxContainer" groups=["element_button"] instance=ExtResource("6_blybv")]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_oem0s")
element = 4

[node name="ElementButton6" parent="HBoxContainer/CentralMenu/VBoxContainer/MarginContainer2/HBoxContainer" groups=["element_button"] instance=ExtResource("6_blybv")]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_u8aae")
element = 5

[node name="ElementButton7" parent="HBoxContainer/CentralMenu/VBoxContainer/MarginContainer2/HBoxContainer" groups=["element_button"] instance=ExtResource("6_blybv")]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_3h523")
element = 6

[node name="MarginContainer" type="PanelContainer" parent="HBoxContainer/CentralMenu/VBoxContainer"]
custom_minimum_size = Vector2(1160, 182)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_k0a7c")

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/CentralMenu/VBoxContainer/MarginContainer"]
layout_mode = 2
vertical_scroll_mode = 0

[node name="StashMarginContainer" type="MarginContainer" parent="HBoxContainer/CentralMenu/VBoxContainer/MarginContainer/ScrollContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 15

[node name="BuildBar" type="GridContainer" parent="HBoxContainer/CentralMenu/VBoxContainer/MarginContainer/ScrollContainer/StashMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/h_separation = 100
columns = 999
script = ExtResource("7")

[node name="ItemStashMenu" type="GridContainer" parent="HBoxContainer/CentralMenu/VBoxContainer/MarginContainer/ScrollContainer/StashMarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/h_separation = 100
columns = 999
script = ExtResource("8_ww2i1")

[node name="RightMenu" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(159, 209)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxTexture_oe0pm")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/RightMenu"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/RightMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 6
alignment = 1

[node name="GoldStatusPanel" parent="HBoxContainer/RightMenu/MarginContainer/VBoxContainer" instance=ExtResource("9_rbj65")]
layout_mode = 2
script = ExtResource("10_ewb28")
icon_texture = SubResource("AtlasTexture_rpdmv")
default_label_text = "0"

[node name="KnowledgeTomeStatusPanel" parent="HBoxContainer/RightMenu/MarginContainer/VBoxContainer" instance=ExtResource("9_rbj65")]
layout_mode = 2
script = ExtResource("11_hpp3y")
icon_texture = SubResource("AtlasTexture_3eojl")
default_label_text = "0"

[node name="FoodStatusPanel" parent="HBoxContainer/RightMenu/MarginContainer/VBoxContainer" instance=ExtResource("9_rbj65")]
layout_mode = 2
script = ExtResource("13_b8pl0")
icon_texture = SubResource("AtlasTexture_h4urn")
default_label_text = "0/60"

[connection signal="mouse_entered" from="HBoxContainer/LeftMenu/MarginContainer/VBoxContainer2/UpgradeElementButton" to="." method="_on_upgrade_element_button_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/LeftMenu/MarginContainer/VBoxContainer2/UpgradeElementButton" to="." method="_on_upgrade_element_button_mouse_exited"]
[connection signal="pressed" from="HBoxContainer/LeftMenu/MarginContainer/VBoxContainer2/UpgradeElementButton" to="." method="_on_upgrade_element_button_pressed"]
[connection signal="pressed" from="HBoxContainer/LeftMenu/MarginContainer/VBoxContainer2/BuildingMenuButton" to="." method="_on_BuildMenuButton_pressed"]
[connection signal="pressed" from="HBoxContainer/LeftMenu/MarginContainer2/ItemMenuButton" to="." method="_on_ItemMenuButton_pressed"]
[connection signal="gui_input" from="HBoxContainer/CentralMenu/VBoxContainer/MarginContainer/ScrollContainer/StashMarginContainer" to="." method="_on_stash_margin_container_gui_input"]
